tests/fixtures/invalid/str_floordiv_bytes.py
# Cannot floor divide Str and Bytes
x: str = "hello" // b"hello"
